@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \
-\  $Date: 2008-05-13 05:44:05 $ $Revision: 1.10 $
+\  $Date: 2008-11-23 06:48:53 $ $Revision: 1.11 $
 \
 \ ==============================================================================
 \
@@ -226,6 +226,10 @@ s" Wrong file type"    exception constant exp-wrong-file-type
 s" Wrong file version" exception constant exp-wrong-file-version 
 \ -- n = Wrong file data
 s" Wrong file data"    exception constant exp-wrong-file-data
+\ -- n = Wrong checksum
+s" Wrong checksum"     exception constant exp-wrong-checksum
+\ -- n = Wrong length
+s" Wrong length"       exception constant exp-wrong-length
 
 [ELSE]
  drop
